--- a/New folder/test.html
+++ b/New folder/test.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100 text-gray-700">
 
-    <!-- Navbar Section -->
+    <!-- Navbar Sectiontrhtrhtrthr -->
     <header class="bg-white shadow-md">
         <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
             <div class="logo">
