--- a/New folder/test.html
+++ b/New folder/test.html
@@ -16,13 +16,14 @@
             </div>
             <nav>
                 <ul class="flex space-x-6 text-gray-600">
-                    <li><a href="#" class="hover:text-red-500">Home</a></li>
+                    <li><a href="#" class="hover:text-red-500">Homies</a></li>
                     <li><a href="#" class="hover:text-red-500">About</a></li>
                     <li><a href="#" class="hover:text-red-500">Service</a></li>
                     <li><a href="#" class="hover:text-red-500">Portfolio</a></li>
                     <li><a href="#" class="hover:text-red-500">Team</a></li>
                     <li><a href="#" class="hover:text-red-500">Testimonials</a></li>
                     <li><a href="#" class="text-red-500">Contact</a></li>
+                    <li>abouuuut</li>
                 </ul>
             </nav>
         </div>
